fix(security): apply security audit remediations, csrf, ssrf, jwt validation, and cookie path fixes